                          WebAuth Change History

WebAuth 3.6.0 (unreleased)

 *) In the WebLogin script, work around a bug in the CGI module that
    causes it to misparse and die on WebLogin URLs that contain two
    slashes and two plus signs.

 *) Escape Mac OS X compiler flags for apxs, fixing build issues on Mac OS
    X 10.5.

WebAuth 3.5.5 (2008-01-14)

 *) Checks for browser cookies weren't working with Apache authentication
    support since the login screen was bypassed.  Simplify the logic by
    checking for browser cookies on the first page visit to WebLogin via a
    redirect and showing an error immediately if the user doesn't have
    cookies enabled.

    There is a new template variable, err_cookies_disabled, for the error
    template, indicating that the user doesn't have cookies enabled.  Old
    templates are supported but won't offer as nice of an error message.
    The err_cookies parameter to the login template is no longer used.

    Thanks to Joachim Keltsch for the patch.

 *) mod_webauthldap was allocating pool memory for the Kerberos ticket
    cache environment variable.  This memory might be freed while the
    environment variable was still in use, leading to segfaults in
    embedded code such as mod_php that walked the environment table.
    Switch to setting the ticket cache once on configuration reload using
    malloc memory and not freeing the memory allocated.  This may leak a
    small amount of memory on server reloads but will never invalidate the
    enivronment variables.

 *) Improve extraction of return URLs for user-friendly display when doing
    authentication for a Shibboleth IdP.  The target parameter isn't
    always set, but when it isn't, the shire parameter will generally
    still contain the destination host.  Also use URI::QueryParam to parse
    the parameters rather than a regular expression.  Thanks, Robert
    Basch.

 *) Show the correct pretty Shibboleth return URL when redisplaying the